tdf#143105 Don't export empty URLs to PDF

They also won't be saved to the ODT if empty.

Change-Id: I7a8480bfc12261b4904981abb75b59752e354b4d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/118032
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
(cherry picked from commit 99ef46fdb2a975e074c66a02328b86edfc05307f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/118058
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>