sw/source/core/text/EnhancedPDFExportHelper.cxx
@@ -1738,7 +1738,9 @@ void SwEnhancedPDFExportHelper::EnhancedPDFExport()
                     static_cast<const SwPageFrame*>( mrSh.GetLayout()->Lower() );
 
                 OUString aURL( static_cast<const SwFormatURL*>(pItem)->GetURL() );
-                const bool bIntern = !aURL.isEmpty() && '#' == aURL[0];
+                if (aURL.isEmpty())
+                    continue;
+                const bool bIntern = '#' == aURL[0];
 
                 // Create the destination for internal links:
                 sal_Int32 nDestId = -1;
